Actualiza el título de Lab 4 a "Lab 4 – RTOS Snake Game Part 2" y mejora la descripción para reflejar el enfoque en técnicas avanzadas de temporización, sincronización y análisis de rendimiento.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -56,13 +56,11 @@ import freertos from '../../assets/freertos.png';
     description="Create a simple Snake game using FreeRTOS tasks, timers, and inter-task communication and Mutexes."
     href="/labs/lab3/"
   />
-    {false && (
   <LinkCard
-    title="Lab 5 – Final System Integration"
-    description="Combine all labs into a unified Embedded Arcade system running under FreeRTOS."
-    href="/labs/lab5/"
+    title="Lab 4 – RTOS Snake Game Part 2"
+    description="Enhance the Snake game with advanced timing, synchronization, and performance analysis."
+    href="/labs/lab4/"
   />
-  )}
 </CardGrid>
 
 <Aside type="tip" title="What is an RTOS?">
