--- a/src/content/docs/labs/lab4.mdx
+++ b/src/content/docs/labs/lab4.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Lab 4: Advanced Timing, Synchronization & Performance Analysis"
+title: "Lab 4 – RTOS Snake Game Part 2"
 description: "Master advanced FreeRTOS timing techniques, interrupt-driven synchronization, and system performance optimization through comprehensive analysis of your Snake game."
 links:
 - /labs/lab3/
